--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -15,9 +15,10 @@ jobs:
     strategy:
 #      # Prevent SEC rate-limiting by limiting number of parallel runners
 #      max-parallel: 5
-#      fail-fast: true
+      fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+#        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
         include:
           - os: ubuntu-latest
